# edx-cert-sdk

./: README.md  pyproject.toml
edx_cert_sdk/: cli.py  settings.py  static_files.py
edx_cert_sdk/mako_util/: static_content.html  watch_for_changes.html
tests/: test_edx_cert_sdk.py
