[tool.poetry]
name = "edx-cert-sdk"
version = "0.1.0"
description = ""
authors = ["Lennart Vogelsang <lennart@vogelsang.berlin>"]

[tool.poetry.scripts]
edx-cert-sdk = "edx_cert_sdk:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
Mako = "^1.1.4"
typed-settings = "^0.10.0"
starlette = "^0.16.0"
uvicorn = "^0.14.0"
pyserde = "^0.4.0"
watchgod = "^0.7"
sse-starlette = "^0.7.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
